# demand-forecasting

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_CONTEXT.md  README.md  pyproject.toml
analysis/: 01_log_log_ols.Rmd  02_binary_logit_sessions.Rmd  03_mixed_logit.Rmd  04_dml.Rmd  05_regression_discontinuity.Rmd  06_tobit_censored.Rmd  07_iv_2sls_control_function.Rmd  README.md
data/: dim_product_store.csv  dim_segment_truth.csv  endogenous_market.csv  ground_truth_curves.csv  promo_calendar.csv  truth_params.csv
docs/: 00_spec.md  01_research_foundations.md  02_censored_demand.md  03_models_python_r.md  04_experimentation.md  05_endogenous_pricing.md  06_phase2_dataset.md  07_phase3_experiments.md  08_phase4_endogeneity.md  09_phase5_forecasting.md
examples/: phase3_experiments.py  phase4_endogeneity.py  phase5_forecasting.py  quickstart.py
scripts/: generate_analysis_datasets.py  generate_phase2_dataset.py
src/demand_sim/: __init__.py  arrivals.py  behavior.py  config.py  demand.py  endogenous.py  experiments.py  forecast.py  guardrails.py  interference.py  inventory.py  metrics.py  panel.py  population.py  power.py  pricing.py  rd.py  simulate.py  substitution.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
